去除随机化

--- a/src/mapCss.css
+++ b/src/mapCss.css
@@ -48,7 +48,7 @@ svg {
   height: 100vh;
   user-select: none;
   display: block;
-  background-color: #00b4cc;
+  background-color: #ffffff;
 }
 path {
   fill: none;
