完成了评价,准备完善搜索框

--- a/src/component/star_rating_component/star_rating.html
+++ b/src/component/star_rating_component/star_rating.html
@@ -26,4 +26,5 @@
     <span data-value="2">&#9733;</span>
     <span data-value="1">&#9733;</span>
   </div>
+  <div id="over_rating"></div>
 </template>
