--- a/src/mapCss.css
+++ b/src/mapCss.css
@@ -41,11 +41,10 @@ input[type="text"] {
 html,
 body {
   margin: 0;
-  overflow: hidden;
 }
 svg {
   width: 100vw;
-  height: 100vh;
+  height: 500px;
   user-select: none;
   display: block;
   background-color: #ffffff;
