完成编辑器的标题

--- a/src/component/mark_component/mark.html
+++ b/src/component/mark_component/mark.html
@@ -87,6 +87,8 @@
         上传图片
         <input type="file" class="md-upload" style="display: none" />
       </label>
+      <input type="text" id="title" placeholder="title" />
+
       <button class="close-btn" id="close-editor-btn">关闭</button>
       <button class="close-btn" id="save-btn">保存</button>
     </div>
